[package]
name = "yt-as-storage"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.19"
walkdir = "2"
indicatif = "0.17.6"
rayon = "1.7.0"
crossbeam-utils = "0.8.16"
